# ztf-lcsim

./: .gitignore  MANIFEST.in  config.yaml  makefile  pyproject.toml  requirements.txt  setup.py
examples/: demo.py
scripts/: 01_build_database.py  02_build_index.py  03_search.py  04_explain_match.py  05_train_ml.py  README.md
ztf_lcsim/: __init__.py  config.py  database.py  downloader.py  feature.py  features.py  index.py  ml_features.py  plots.py
