[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztf-lcsim"
version = "0.1.0"
description = "ZTF Light Curve Similarity Search Engine"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["astronomy", "ztf", "alerce", "light-curves", "similarity-search"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core deps — numpy pinned to >=1.21 (faiss handled separately via extras)
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "astropy>=5.0",
    "alerce>=1.0",
    "scikit-learn>=1.0",
    "h5py>=3.4",
    "matplotlib>=3.4",
    "seaborn>=0.12",
    "tqdm>=4.62",
    "pyyaml>=6.0",
    "requests>=2.26",
    "click>=8.0",
    "joblib>=1.1",
    "pyarrow>=7.0",
]

[project.optional-dependencies]
# faiss-cpu>=1.8 requires numpy>=2.0
# If you have numpy 1.x, install faiss via:  conda install -c conda-forge faiss-cpu
faiss        = ["faiss-cpu>=1.7", "numpy>=2.0"]
faiss-legacy = ["faiss-cpu>=1.7,<1.8"]          # numpy 1.x compatible
faiss-gpu    = ["faiss-gpu>=1.7", "numpy>=2.0"]
dev          = ["pytest>=7", "jupyter", "ipykernel", "black", "flake8"]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/ztf-lcsim"
Repository = "https://github.com/YOUR_USERNAME/ztf-lcsim"
Issues     = "https://github.com/YOUR_USERNAME/ztf-lcsim/issues"

[tool.setuptools.packages.find]
exclude = ["scripts*", "tests*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md"]
